# deep_research_app

./: .env.example  .gitignore  CLAUDE.md  LAUNCH_GUIDE.md  QUICK_START.txt  README.md  README_START.txt  REVERT-12f86e1d2b79837b84ecddaabfc1783a3dcf53c5.md  REVERT_COMMIT.md  RUN.bat  RUN.ps1  START_FROM_WSL.txt  app_simple.py  docker-compose.yml  launch.bat  launch.ps1  launch.sh  launch_simple.bat  one-button.sh  prd_deep_research_app_v3.md  pyproject.toml  setup.sh  test_app_minimal.py
app/: __init__.py  streamlit_app.py
app/ui/: __init__.py  brief.py  composer.py  evidence.py  progress.py  runs.py
control_plane/: Dockerfile  main.py  requirements.txt
ingestion/: __init__.py  chunker.py  embeddings.py  pdf.py  url.py
migrations/: 001_fix_keyword_search.sql  001_init.sql  002_research_briefs.sql
publish/: __init__.py  publisher.py
research_agent/: __init__.py  agent.py  prompts.py
research_agent/middleware/: __init__.py  citation.py  critique.py  ingestion.py  retrieval.py
research_agent/tools/: __init__.py  citation.py  ingestion.py  retrieval.py
retrieval/: __init__.py  hybrid_search.py  reranker.py
sandbox/: seed_job.py  verify.py
schemas/: __init__.py  config.py  models.py
scripts/: apply_migration.py  verify_db.py
services/: __init__.py  citation.py  versioning.py
storage/: __init__.py  supabase.py  vector.py
supabase/migrations/: 0001_init.sql
tests/: __init__.py
ui/: Dockerfile  index.html  package.json
ui/src/: App.jsx
worker/: Dockerfile  main.py  requirements.txt
